--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -4,6 +4,6 @@ $link: #0065ff;
 $success: #00bd98;
 $info: #009fff;
 $warning: #ffbf3f;
-$daner: #ff0074;
+$danger: #ff0074;
 $light: #fcf8ff;
 $dark: #1f1926;
