--- a/scss/modifiers/colors.scss
+++ b/scss/modifiers/colors.scss
@@ -1,66 +1,4 @@
-// @import "../mixins.scss";
-
-// .primary {
-//   @include primary;
-// }
-
-// .secondary {
-//   @include secondary;
-// }
-
-// .link {
-//   @include link;
-// }
-
-// .success {
-//   @include success;
-// }
-
-// .info {
-//   @include info;
-// }
-
-// .warning {
-//   @include warning;
-// }
-
-// .danger {
-//   @include danger;
-// }
-
-// .light {
-//   @include light;
-// }
-
-// .dark {
-//   @include dark;
-// }
-
-// .primary {
-//   @include primary;
-// }
-
-// .secondary {
-//   @include secondary;
-// }
-
-// .link {
-//   @include link;
-// }
-
-// .success {
-//   @include success;
-// }
-
-// .info {
-//   @include info;
-// }
-
-// .warning {
-//   @include warning;
-// }
-
-@import "../mixins.scss";
+@import "../mixins/mixins.scss";
 
 .primary {
   @include primary;
@@ -124,8 +62,4 @@
 
 .transparent {
   @include transparent;
-}
-
-.outlined {
-  @include outlined;
 }
