--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -1,3 +1,4 @@
+/* Main */
 $primary: #6815eb;
 $secondary: #ee00b0;
 $link: #0065ff;
@@ -7,3 +8,14 @@ $warning: #ffbf3f;
 $danger: #ff0074;
 $light: #fcf8ff;
 $dark: #1f1926;
+
+/* Grayscale */
+$grey1: #dcdcdc;
+$grey2: #d3d3d3;
+$grey3: #c0c0c0;
+$grey4: #a9a9a9;
+$grey5: #808080;
+$grey6: #696969;
+
+// Elements
+$button: #00008e;
