--- a/scss/mixins/mixins.scss
+++ b/scss/mixins/mixins.scss
@@ -1,5 +1,6 @@
 @import "./colors.mixin.scss";
 @import "./sizing.mixin.scss";
+@import "./shadow.mixin.scss";
 
 @mixin clickable {
   cursor: pointer;
