--- a/scss/elements/button.element.scss
+++ b/scss/elements/button.element.scss
@@ -1,6 +1,6 @@
 // Properties that can be not supported:
 // filter, user-select
-@import "../variables/colors.scss";
+@import "../variables/variables.scss";
 @import "../mixins/mixins.scss";
 
 @mixin buttonShadow {
