--- a/scss/nebula.scss
+++ b/scss/nebula.scss
@@ -1,8 +1,5 @@
-@import "./elements/button.scss";
-@import "./elements/input.scss";
-@import "./modifiers/sizing.scss";
-@import "./modifiers/main.scss";
-@import "./modifiers/colors.scss";
+@import "./elements/elements.scss";
+@import "./modifiers/modifiers.scss";
 
 * {
   font-family: Arial, Helvetica, sans-serif;
