--- a/scss/elements/button.element.scss
+++ b/scss/elements/button.element.scss
@@ -21,7 +21,6 @@
   &:not(.xs):not(.sm):not(.lg):not(.xl) {
     @include md(1rem);
   }
-
   @include clickable;
   &:not(.no-shadow):not(.transparent) {
     &.outlined {
@@ -32,7 +31,7 @@
     }
     @include buttonShadow;
   }
-  padding: 0.2rem 0.7rem;
+  padding: ((1rem / $goldenRatio) * 0.5) (1rem / $goldenRatio);
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
