--- a/scss/elements/button.element.scss
+++ b/scss/elements/button.element.scss
@@ -31,6 +31,9 @@
     }
     @include buttonShadow;
   }
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   padding: ((1rem / $goldenRatio) * 0.5) (1rem / $goldenRatio);
   border-style: solid;
   border-width: 1px;
